argo-ingress.yml
apiVersion: networking.k8s.io/v1  
kind: Ingress  
metadata:  
  name: argocd-ingress  
  namespace: argocd
  annotations:  
    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    nginx.ingress.kubernetes.io/ssl-passthrough: "false"
spec:  
  ingressClassName: "nginx"
  rules:  
  - host: argocd.20.195.125.92.nip.io
    http:  
      paths:  
      - path: /
        pathType: Prefix  
        backend:  
          service:  
            name: argocd-server  
            port:  
              number: 443
